// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datapoint renders 1`] = `
<div
  className="Flex rowGap0 columnGap1 xsDirectionColumn"
>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
      style={
        Object {
          "minHeight": 24,
        }
      }
    >
      <div
        className="FlexItem"
      >
        <div
          className="default alignStart breakWord Text fontSize200 fontWeightNormal"
        >
          Title
          <div
            className="box relative"
            style={
              Object {
                "display": "inline",
              }
            }
          >
            <div
              className="box xsDisplayVisuallyHidden"
            >
              ,
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
    >
      <div
        className="FlexItem"
      >
        <div
          className="default alignStart breakWord Text fontSize400 fontWeightSemiBold"
        >
          1M
          <div
            className="box relative"
            style={
              Object {
                "display": "inline",
              }
            }
          >
            <div
              className="box xsDisplayVisuallyHidden"
            >
              ,
            </div>
          </div>
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="Flex rowGap1 columnGap0 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <svg
              aria-hidden={null}
              aria-label="Value change icon accessibility label"
              className="success icon iconBlock"
              height={16}
              role="img"
              viewBox="0 0 24 24"
              width={16}
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="success alignStart breakWord Text fontSize200 fontWeightSemiBold"
            >
              30%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datapoint renders a badge 1`] = `
<div
  className="Flex rowGap0 columnGap1 xsDirectionColumn"
>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
      style={
        Object {
          "minHeight": 24,
        }
      }
    >
      <div
        className="FlexItem"
      >
        <div
          className="default alignStart breakWord Text fontSize200 fontWeightNormal"
        >
          Title
          <div
            className="box relative"
            style={
              Object {
                "display": "inline",
              }
            }
          >
            <div
              className="box xsDisplayVisuallyHidden"
            >
              ,
            </div>
          </div>
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="badge info middle"
        >
          <div
            className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
          >
            <div
              className="FlexItem"
            >
              <div
                className="box contentCenter xsDisplayFlex"
              >
                <span
                  className="inverse alignStart breakWord Text fontWeightSemiBold fontSize200"
                >
                  Early access
                </span>
              </div>
            </div>
          </div>
           
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
    >
      <div
        className="FlexItem"
      >
        <div
          className="default alignStart breakWord Text fontSize400 fontWeightSemiBold"
        >
          1M
          <div
            className="box relative"
            style={
              Object {
                "display": "inline",
              }
            }
          >
            <div
              className="box xsDisplayVisuallyHidden"
            >
              ,
            </div>
          </div>
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="Flex rowGap1 columnGap0 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <svg
              aria-hidden={null}
              aria-label="Value change icon accessibility label"
              className="success icon iconBlock"
              height={16}
              role="img"
              viewBox="0 0 24 24"
              width={16}
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="success alignStart breakWord Text fontSize200 fontWeightSemiBold"
            >
              30%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datapoint renders a tooltip 1`] = `
<div
  className="Flex rowGap0 columnGap1 xsDirectionColumn"
>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
      style={
        Object {
          "minHeight": 24,
        }
      }
    >
      <div
        className="FlexItem"
      >
        <div
          className="default alignStart breakWord Text fontSize200 fontWeightNormal"
        >
          Title
          <div
            className="box relative"
            style={
              Object {
                "display": "inline",
              }
            }
          >
            <div
              className="box xsDisplayVisuallyHidden"
            >
              ,
            </div>
          </div>
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="box xsDisplayBlock"
        >
          <div
            aria-label=""
            className="box"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              aria-disabled={false}
              aria-label="This is a good sign"
              className="tapTransition circle accessibilityOutline fullWidth pointer"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                aria-label=""
                className="subtle icon iconBlock"
                height={16}
                role="img"
                viewBox="0 0 24 24"
                width={16}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
    >
      <div
        className="FlexItem"
      >
        <div
          className="default alignStart breakWord Text fontSize400 fontWeightSemiBold"
        >
          1M
          <div
            className="box relative"
            style={
              Object {
                "display": "inline",
              }
            }
          >
            <div
              className="box xsDisplayVisuallyHidden"
            >
              ,
            </div>
          </div>
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="Flex rowGap1 columnGap0 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <svg
              aria-hidden={null}
              aria-label="Value change icon accessibility label"
              className="success icon iconBlock"
              height={16}
              role="img"
              viewBox="0 0 24 24"
              width={16}
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="success alignStart breakWord Text fontSize200 fontWeightSemiBold"
            >
              30%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datapoint renders an accessibility label 1`] = `
<div
  className="Flex rowGap0 columnGap1 xsDirectionColumn"
>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
      style={
        Object {
          "minHeight": 24,
        }
      }
    >
      <div
        className="FlexItem"
      >
        <div
          className="default alignStart breakWord Text fontSize200 fontWeightNormal"
        >
          Title
          <div
            className="box relative"
            style={
              Object {
                "display": "inline",
              }
            }
          >
            <div
              className="box xsDisplayVisuallyHidden"
            >
              ,
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
    >
      <div
        className="FlexItem"
      >
        <div
          className="default alignStart breakWord Text fontSize400 fontWeightSemiBold"
        >
          1M
          <div
            className="box relative"
            style={
              Object {
                "display": "inline",
              }
            }
          >
            <div
              className="box xsDisplayVisuallyHidden"
            >
              ,
            </div>
          </div>
        </div>
      </div>
      <div
        className="FlexItem"
      >
        <div
          className="Flex rowGap1 columnGap0 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <svg
              aria-hidden={null}
              aria-label="Value change icon accessibility label"
              className="success icon iconBlock"
              height={16}
              role="img"
              viewBox="0 0 24 24"
              width={16}
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="success alignStart breakWord Text fontSize200 fontWeightSemiBold"
            >
              30%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
